--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2936,11 +2936,12 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_izmit_vilayet_centralization_desc_yes:0 "----------------------------\nVilayet Centralization: [?global.TUR_izmit_centralization|Y0%][ottoman_izmit_vilayet_centralization_value]"
  ottoman_izmit_vilayet_centralization_value_yes:0 "\nEffects from §YVilayet Centralization§!:\n£manpower_texticon  Local Manpower: [?TUR_izmit_vc_effect|+%]\n£civ_factory_sabotage  Chance to Sabotage Constructions: [?TUR_izmit_vc_effect|0-%]\n£political_violence_texticon  Resistance Target: [?TUR_izmit_vc_effect_minus|0-%]\n£compliance_gain_texticon  Compliance Growth Speed: [?TUR_izmit_vc_effect_2|0+%]\n£political_violence_damage_texticon  Damage to Garrisons: [?TUR_izmit_vc_effect|-%]\n£garrison_texticon  Required Garrisons: [?TUR_izmit_vc_effect|0-%]\n£construction_speed_texticon  Local Construction Speed: [?TUR_izmit_vc_effect|+%]"
  ottoman_izmit_vilayet_separatist_sentiments_yes:0 "\nModify §YSeparatist Sentiments§! by[ottoman_izmit_vilayet_stability_factor][ottoman_izmit_vilayet_war_support_factor][ottoman_izmit_vilayet_political_power_factor]"
- ottoman_izmit_vilayet_separatist_sentiments_desc_yes:0 "\n----------------------------\nModify §YSeparatist Sentiments§! by[ottoman_izmit_vilayet_stability_factor][ottoman_izmit_vilayet_war_support_factor][ottoman_izmit_vilayet_political_power_factor][ottoman_izmit_vilayet_1019]"
+ ottoman_izmit_vilayet_separatist_sentiments_desc_yes:0 "\n----------------------------\nModify §YSeparatist Sentiments§! by[ottoman_izmit_vilayet_stability_factor][ottoman_izmit_vilayet_war_support_factor][ottoman_izmit_vilayet_political_power_factor][ottoman_izmit_vilayet_1019][ottoman_izmit_vilayet_1035]"
  ottoman_izmit_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_izmit_stability_factor|=2%+]"
  ottoman_izmit_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_izmit_war_support_factor|=2%+]"
  ottoman_izmit_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_izmit_political_power_factor|=0%+]"
  ottoman_izmit_vilayet_1019_yes:0 "\n§Y[1019.GetName]§!:[TUR_armenian_population_1019][TUR_greek_population_1019][TUR_turkish_population_1019]"
+ ottoman_izmit_vilayet_1035_yes:0 "\n§Y[1035.GetName]§!:[TUR_armenian_population_1035][TUR_greek_population_1035][TUR_turkish_population_1035]"
 
  TUR_edirne_vilayet:0 "Edirne Vilayet"
  TUR_edirne_vilayet_desc:0 "[TUR_edirne_vilayet_desc]"
@@ -4178,6 +4179,10 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_armenian_population_1019_stability_factor_yes:0 "\n£stability_texticon  Stability: [?ROOT.TUR_1019_armenian_population_stability_factor|=2%+]"
  TUR_armenian_population_1019_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?ROOT.TUR_1019_armenian_population_war_support_factor|=2%+]"
  TUR_armenian_population_1019_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?ROOT.TUR_1019_armenian_population_war_support_factor|=0%+]"
+ TUR_armenian_population_1035_yes:0 "\n£ww1_flag_ARM  §YArmenian Minority§![TUR_armenian_population_1035_stability_factor][TUR_armenian_population_1035_war_support_factor][TUR_armenian_population_1035_political_power_factor]"
+ TUR_armenian_population_1035_stability_factor_yes:0 "\n£stability_texticon  Stability: [?ROOT.TUR_1035_armenian_population_stability_factor|=2%+]"
+ TUR_armenian_population_1035_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?ROOT.TUR_1035_armenian_population_war_support_factor|=2%+]"
+ TUR_armenian_population_1035_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?ROOT.TUR_1035_armenian_population_war_support_factor|=0%+]"
  TUR_armenian_population_1022_yes:0 "\n£ww1_flag_ARM  §YArmenian Minority§![TUR_armenian_population_1022_stability_factor][TUR_armenian_population_1022_war_support_factor][TUR_armenian_population_1022_political_power_factor]"
  TUR_armenian_population_1022_stability_factor_yes:0 "\n£stability_texticon  Stability: [?ROOT.TUR_1022_armenian_population_stability_factor|=2%+]"
  TUR_armenian_population_1022_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?ROOT.TUR_1022_armenian_population_war_support_factor|=2%+]"
@@ -4338,6 +4343,10 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_greek_population_1019_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_1019_greek_population_stability_factor|=2%+]"
  TUR_greek_population_1019_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_1019_greek_population_war_support_factor|=2%+]"
  TUR_greek_population_1019_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_1019_greek_population_war_support_factor|=0%+]"
+ TUR_greek_population_1035_yes:0 "\n£ww1_game_rule_flag_GRE  §YGreek Minority§![TUR_greek_population_1035_stability_factor][TUR_greek_population_1035_war_support_factor][TUR_greek_population_1035_political_power_factor]"
+ TUR_greek_population_1035_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_1035_greek_population_stability_factor|=2%+]"
+ TUR_greek_population_1035_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_1035_greek_population_war_support_factor|=2%+]"
+ TUR_greek_population_1035_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_1035_greek_population_war_support_factor|=0%+]"
  TUR_arab_population_273_yes:0 "\n£ww1_flag_ARB  §YArab Minority§![TUR_arab_population_273_stability_factor][TUR_arab_population_273_war_support_factor][TUR_arab_population_273_political_power_factor]"
  TUR_arab_population_273_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_273_arab_population_stability_factor|=2%+]"
  TUR_arab_population_273_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_273_arab_population_war_support_factor|=2%+]"
@@ -5302,6 +5311,10 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_turkish_population_1019_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_1019_turkish_population_stability_factor|=2%+]"
  TUR_turkish_population_1019_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_1019_turkish_population_war_support_factor|=2%+]"
  TUR_turkish_population_1019_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_1019_turkish_population_war_support_factor|=0%+]"
+ TUR_turkish_population_1035_yes:0 "\n£ww1_flag_TUR  §YTurkish Minority§![TUR_turkish_population_1035_stability_factor][TUR_turkish_population_1035_war_support_factor][TUR_turkish_population_1035_political_power_factor]"
+ TUR_turkish_population_1035_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_1035_turkish_population_stability_factor|=2%+]"
+ TUR_turkish_population_1035_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_1035_turkish_population_war_support_factor|=2%+]"
+ TUR_turkish_population_1035_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_1035_turkish_population_war_support_factor|=0%+]"
  TUR_azerbaijani_population_229_yes:0 "\n£ww1_flag_AZR  §YAzerbaijani Minority§![TUR_azerbaijani_population_229_stability_factor][TUR_azerbaijani_population_229_war_support_factor][TUR_azerbaijani_population_229_political_power_factor]"
  TUR_azerbaijani_population_229_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_229_azerbaijani_population_stability_factor|=2%+]"
  TUR_azerbaijani_population_229_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_229_azerbaijani_population_war_support_factor|=2%+]"
