--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1034,6 +1034,13 @@
  STATE_1033: "Niğde"
  STATE_1034: "Lazistan"
  STATE_1035: "Adapazarı"
+ STATE_1036: "Gobad"
+ STATE_1037: "Afar"
+ STATE_1038: "Hormadiid"
+ STATE_1039: "Docmo"
+ STATE_1040: "Illig"
+ STATE_1041: "Taleh"
+ STATE_1042: "Warsangali"
 
  Dyushambe: "Dyushambe"
  YODONG_STATE: "Yodong"
