--- a/localisation/russian/countries_cosmetic_l_russian.yml
+++ b/localisation/russian/countries_cosmetic_l_russian.yml
@@ -442,10 +442,23 @@
  CHI_uprising_alt_neutrality_DEF:0 "Бэйянское правительство Республики Китай"
  CHI_uprising_alt_democratic:0 "Бэйянское Правительство"
  CHI_uprising_alt_democratic_DEF:0 "Бэйянское Правительство Республики Китай"
+ CHI_hubei:0 "Хубэй"
+ CHI_hubei_DEF:0 "Хубэй"
+ CHI_hubei_ADJ:0 "Хубэйск"
+ CHI_hubei_neutrality_DEF:0 "Военное Правительство Хубэя"
+ CHI_hubei_democratic_DEF:0 "Революционное Правительство Хубэя"
+ CHI_hubei_fascism_DEF:0 "Военное Правительство Хубэя"
+ CHI_hubei_communism_DEF:0 "Революционное Правительство Хубэя"
  CHI_revolution:0 "Революционный Китай"
- CHI_revolution_neutrality:0 "Хубэй"
- CHI_revolution_neutrality_DEF:0 "Военное Правительство Хубэя"
- CHI_revolution_democratic:0 "Китайский Революционный Союз"
+ CHI_revolution_DEF:0 "Революционный Китай"
+ CHI_revolution_democratic:0 "Китайский Революционный Альянс"
+ CHI_revolution_democratic_DEF:0 "Китайский Революционный Альянс"
+ CHI_revolution_communism:0 "Китайский Революционный Фронт"
+ CHI_revolution_communism_DEF:0 "Китайский Революционный Фронт"
+ CHI_revolution_neutrality:0 "Китайская Революционная Хунта"
+ CHI_revolution_neutrality_DEF:0 "Китайская Революционная Хунта"
+ CHI_revolution_fascism:0 "Китайская Революционная Хунта"
+ CHI_revolution_fascism_DEF:0 "Китайская Революционная Хунта"
  CHI_neutrality_sichuan:0 "Сычуань"
  CHI_neutrality_sichuan_DEF:0 "Военное Правительство Сычуаня"
  CHI_neutrality_hubei:0 "Хубэй"
