--- a/localisation/russian/ww1_adjacency_rules_l_russian.yml
+++ b/localisation/russian/ww1_adjacency_rules_l_russian.yml
@@ -4,7 +4,6 @@
  GULF_ADEN:0 "Аденский залив"
  MALACCA_STRAIT:0 "Малаккский пролив"
  KAISER_WILHELM_KANAL:0 "Канал кайзера Вильгельма"
- VOLGA_DON_CANAL:0 "Волго-Донской канал"#Volga-Don Canal
  CER_ROUTE:0 "Китайская Восточная железная дорога"
  TSUGARU_STRAIT:0 "Цугарский пролив"
  KANMON_STRAIT:0 "Каммонский пролив"
@@ -15,3 +14,5 @@
  LA_PAROUSE_STRAIT:0 "Лаперузский пролив"
  NORTH_CHANNEL:0 "Северный пролив"
  NORTH_CHANNEL_FAKE:0 "$NORTH_CHANNEL$"
+ KYTHIRA_STRAIT:0 "Китирский пролив"
+ KYTHIRA_STRAIT_FAKE:0 "$KYTHIRA_STRAIT$"
