--- a/localisation/russian/ww1_victory_points_l_russian.yml
+++ b/localisation/russian/ww1_victory_points_l_russian.yml
@@ -290,7 +290,7 @@
  VICTORY_POINTS_1113:0 "Уцуномия"
  VICTORY_POINTS_7809:0 "Мухаррак"
  VICTORY_POINTS_1966:0 "Алула"
- VICTORY_POINTS_12840:0 "Хобио"
+ VICTORY_POINTS_12840:0 "Хобьо"
  VICTORY_POINTS_7830:0 "Афгойе"
  VICTORY_POINTS_6997:0 "Джульфа"
  VICTORY_POINTS_4435:0 "Гангток"
