ittihadist government always join war

--- a/localisation/english/ww1_autonomy_l_english.yml
+++ b/localisation/english/ww1_autonomy_l_english.yml
@@ -11,6 +11,7 @@
  autonomy_tgwr_ottoman_emirate:0 "Ottoman Emirate"
  autonomy_tgwr_ottoman_autonomous_vilayet:0 "Autonomous Vilayet"
  autonomy_tgwr_ottoman_committee_government:0 "Committee Government"
+ autonomy_tgwr_ottoman_committee_government_tt:0 "£trigger_yes Will automatically join wars\nTechnology sharing bonus: §G+70.00%§!"
  autonomy_tgwr_concession:0 "Concession"
  autonomy_tgwr_balkan_federal_subject: "Balkan Federal Subject"
  autonomy_tgwr_regional_government:0 "Regional Government"
