--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5086,6 +5086,7 @@
  TUR_rewarding_loyalties:0 "Rewarding Loyalties"
  TUR_rewarding_loyalties_desc:0 "Above capabilities, Cemâl Paşa values loyalty more than anything. Turk, Arab, Kurd or Armenian, those who stand loyal to him will be rewarded while those standing against him will be punished. His strict importance to loyalty makes his inner circle trustable and easy to control."
  TUR_rewarding_loyalties_tt:0 "Modify §YCemâl's Syria§! by\n£political_advisor_cost_texticon  Political Advisor Cost: §G-50%§!\n\n"
+ TUR_governor_of_aleppo_tt:0 "An §Yevent chain§! will start for us to decide whether we'll change the §YGovernor of Aleppo§!, or keep §YBekir Sami Bey§! in his post."
  TUR_syrian_reforms:0 "Syrian Reforms"
  TUR_syrian_reforms_desc:0 "The main objective of Cemâl Paşa in the Syrian provinces is to reform and centralize these lands. As Cemâl Paşa will follow the path of centralization and integration of Syrian people and lands to the empire that was kickstarted with Tanzimat reforms, Syria will become an integral part of the empire."
  TUR_dealing_with_the_arabist_movement:0 "Dealing with the Arabist Movement"
