--- a/localisation/russian/ww1_characters_l_russian.yml
+++ b/localisation/russian/ww1_characters_l_russian.yml
@@ -221,6 +221,7 @@
  AUH_karl_von_sturgkh:0 "Karl von Stürgkh"
  AUH_marijan_varesanin:0 "Marijan Varešanin von Vareš"
  AUH_oskar_potiorek:0 "Oskar Potiorek"
+ AUH_adolf_von_rhemen:0 "Adolf von Rhemen"
 
  # AUSTRIA
  AUS_franz_koritschoner:0 "Franz Koritschoner"
@@ -243,7 +244,9 @@
  # BAVARIA
  BAY_luitpold_von_bayern:0 "Luitpold von Bayern"
  BAY_ludwig_von_bayern:0 "Ludwig von Bayern"
- BAY_ludwig_iii:0 "Ludwig III"
+ BAY_ludwig_iii:0 "Ludwig III."
+ BAY_rupprecht_von_bayern:0 "Rupprecht von Bayern"
+ BAY_rupprecht_i:0 "Rupprecht I."
  BAY_eugen_levine:0 "Eugen Leviné"
  BAY_kurt_eisner:0 "Kurt Eisner"
  BAY_franz_ritter_von_epp:0 "Franz Ritter von Epp"
@@ -471,6 +474,7 @@
  # BURMA
  BRM_thibaw:0 "Thibaw"
  BRM_thado_minye_mingaung:0 "Thado Minye Minguang"
+ BRM_myat_phaya_lat:0 "Myat Phaya Lat"
 
  # CAMBODIA
  CAM_sisowath:0 "Sisowath"
@@ -678,26 +682,26 @@
  CHL_javier_angel_figueroa:0 "Javier Ángel Figueroa"
  CHL_jorge_boonen:0 "Jorge Boonen"
  CHL_luis_altamirano:0 "Luis Altamirano"
- CHL_garin:0 "Garin"
  CHL_juan_pablo_bennett:0 "Juan Pablo Bennett"
  CHL_jose_maria_bari:0 "José Maria Bari"
  CHL_guillermo_armstrong:0 "Guillermo Armstrong Ramirez"
  CHL_luis_felipe_brieba:0 "Luis Felipe Brieba"
- CHL_merro:0 "Tobias Merro"
- CHL_naschold_argomedo:0 "Otto Argomedo"
- CHL_tellez_cracamo:0 "Tellez Cracamo"
- CHL_ekdahl_anglin:0 "Guillermo Ekdahl Anglin"
- CHL_videla:0 "Federico Videla"
- CHL_ledesma:0 "Enrique Ledesma"
- CHL_sez_morales:0 "Carlos Sez Morales"
- CHL_gomaz_arcos:0 "Alberto Arcos"
- CHL_holley:0 "Adolfo Holley"
- CHL_korner:0 "Emil Körner"
+ CHL_indalicio_tellez_carcamo:0 "Indalicio Tellez Carcamo"
+ CHL_sofanor_parra_hermosilla:0 "Sofanor Parra Hermosilla"
+ CHL_roberto_silva_renard:0 "Roberto Silva Renard"
+ CHL_vicente_palacios:0 "Vicente Palacios"
+ CHL_elias_yanez:0 "Elias Yañez Ponce de Leon"
+ CHL_wilhelm_ekdahl_anglin:0 "Wilhelm Ekdahl Anglin"
+ CHL_jose_de_la_cruz_salvo:0 "Jose de la Cruz Salvo"
+ CHL_adolfo_holley:0 "Adolfo Holley"
+ CHL_emil_korner:0 "Emil Körner"
  CHL_aristides_pinto_concha:0 "Aristides Pinto Concha"
  CHL_jorge_montt:0 "Jorge Montt Alvarez"
  CHL_francisco_neff:0 "Fransisco Neff Jara"
- CHL_ward:0 "Carlos Ward"
- CHL_soublette:0 "Guillermo Soublette"
+ CHL_carlos_ward:0 "Carlos Ward Rodriguez"
+ CHL_luis_gomez_carreno:0 "Luis Gomez Carreño"
+ CHL_joaquin_munoz_hurtado:0 "Joaquin Muñoz Hurtado"
+ CHL_arturo_wilson_navarrete:0 "Arturo Wilson Navarrete"
  CHL_jose_rafael_balmaceda_fernandez:0 "José Rafael Balmaceda Fernández"
  CHL_domingo_amunategui_solar:0 "Domingo Amunategui Solar"
  CHL_agustin_edwards_mac_clure:0 "Agustín Edwards Mac-Clure"
@@ -722,6 +726,14 @@
  CHL_luis_barros_borgono:0 "Luis Barros Borgoño"
  CHL_luis_aldunate_echeverria:0 "Luis Aldunate Echeverría"
  CHL_jorge_matte_gormaz:0 "Jorge Matte Gormaz"
+ CHL_jose_luis_sanchez_besa:0 "Jose Luis Sanchez Besa"
+ CHL_enrique_zanartu_prieto:0 "Enrique Zañartu Prieto"
+ CHL_alberto_gonzalez_errazuriz:0 "Alberto Gonzalez Errazuriz"
+ CHL_enrique_mac-iver_rodriguez:0 "Enrique Mac-Iver Rodriguez"
+ CHL_joaquin_edwards_bello:0 "Joaquin Edwards Bello"
+ CHL_ricardo_matte_perez:0 "Ricardo Matte Perez"
+ CHL_alberto_edwards_vives:0 "Alberto Edwards Vives"
+ CHL_francisco_antonio_encina_armanet:0 "Francisco Antonio Encina Armanet"
 
  # COLOMBIA
  COL_ramon_gonzalez_valencia:0 "Ramón González Valencia"
@@ -915,7 +927,7 @@
  EGY_fuad_i_muhammad_ali:0 "Fuad I"
  EGY_arthur_lyndenbell:0 "Arthur Lynden-Bell"
  EGY_saad_zahloul:0 "Sa'd Zaghloul Pasha"
- EGY_hosni_al_arabi:0 "Hosni al-Arabi"
+ EGY_hosni_al_arabi:0 "Mahmood Husni Al Urabi"
 
  # UNITED KINGDOM
  ENG_walter_long:0 "Walter Long"
@@ -1159,6 +1171,7 @@
  FIN_ali_aaltonen:0 "Ali Aaltonen"
  FIN_verner_lehtimaki:0 "Verner Lehtimäki"
  FIN_august_wesley:0 "August Wesley"
+ FIN_emil_nestor_setala:0 "Eemil Nestor Setälä"
 
  # FRANCE
  FRA_raymond_poincare:0 "Raymond Poincaré"
@@ -1169,6 +1182,9 @@
  FRA_alexandre_millerand_pm_advisor:0 "Alexandre Millerand (First Minister)"
  FRA_edouard_herriot:0 "Édouard Herriot"
  FRA_georges_valois:0 "Georges Valois"
+ FRA_hubert_lagardelle:0 "Hubert Lagardelle"
+ FRA_eugene_mathon:0 "Eugène Mathon"
+ FRA_urbain_gohier:0 "Urbain Gohier"
  FRA_maurice_pujo:0 "Maurice Pujo"
  FRA_gouvernement_provisoire:0 "Gouvernement Provisoire"
  FRA_victoire:0 "Victoria-Louise de Prusse"
@@ -1221,9 +1237,13 @@
  FRA_jacques_bainville:0 "Jacques Bainville"
  FRA_alexandre_ribot:0 "Alexandre Ribot"
  FRA_jacques_piou:0 "Jacques Piou"
+ FRA_francois_coty:0 "François Coty"
  FRA_leon_daudet:0 "Léon Daudet"
  FRA_antoine_schwerer:0 "Antoine Schwerer"
  FRA_maurice_barres:0 "Maurice Barrès"
+ FRA_francois_de_la_rocque:0 "François de La Rocque"
+ FRA_pierre_taittinger:0 "Pierre Taittinger"
+ FRA_jacques_arthuys:0 "Jacques Arthuys"
  FRA_marc_sangnier:0 "Marc Sangnier"
  FRA_nicolas_saclois:0 "Nicolas Saclois"
  FRA_matthieu_abriot:0 "Matthieu Abriot"
@@ -1270,11 +1290,14 @@
  FRA_emile_pouget:0 "Émile Pouget"
  FRA_paul_painleve:0 "Paul Painlevé"
  FRA_georges_clemenceau:0 "Georges Clemenceau"
- FRA_napoleon_v:0 "Napoléon V"
+ FRA_napoleon_v:0 "Victor Napoléon Bonaparte"
  FRA_napoleon_vi:0 "Napoléon VI"
+ FRA_louis_joseph_bonaparte:0 "Napoléon Louis Joseph Bonaparte"
  FRA_philippe_viii:0 "Philippe VIII"
  FRA_jean_iii:0 "Jean III"
+ FRA_jean_iii_desc:0 "Жан Пьер Клеман Мари д'Орлеан де Шартр, герцог Гизы и принц Франции, и по сей день остается самым популярным наследником среди конкурирующих домов. Во время войны он служил в Красном Кресте и был выставлен правительством в качестве олицетворения единства французов; он обладает исключительной аурой, которая приносит ему доверие рабочих классов."
  FRA_jacques_i:0 "Jacques I"
+ FRA_jacques_i_desc:0 "Жак де Бурбон, герцог Анжуйский, герцог Мадридский и принц Франции, зарекомендовал себя как главный кумир реставраторов французского действия. Полковник русской армии, он обратился к политике, когда был отменен закон о ссылке."
  FRA_charles_xii:0 "Charles XII"
  FRA_pierre_joseph_dubois:0 "Pierre Joseph Dubois"
  FRA_dominique_marie_gauchet:0 "Dominique-Marie Gauchet"
@@ -1335,7 +1358,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  GER_paul_von_lettowvorbeck:0 "Paul von Lettow-Vorbeck"
  GER_alfred_von_schlieffen:0 "Alfred von Schlieffen"
  GER_albrecht_von_wurttemberg:0 "Albrecht von Wurttemberg"
- GER_rupprecht_von_wittelsbach:0 "Rupprecht von Bayern"
+ GER_rupprecht_i:0 "Rupprecht I. von Bayern"
  GER_colmar_von_der_goltz:0 "Colmar von der Goltz"
  GER_lepold_von_bayern:0 "Lepold von Bayern"
  GER_friedrich_august_iii:0 "Friedrich August III. von Sachsen"
@@ -1406,6 +1429,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  GER_kress_von_kressenstein:0 "Friedrich Kreß von Kressenstein"
  GER_august_bebel:0 "August Bebel"
  GER_french_military_government:0 "Französische Militärverwaltung"
+ RHN_josef_friedrich_matthes:0 "Josef Friedrich Matthes"
  GER_wilhelm_filchner:0 "Wilhelm Filchner"
  GER_workers_councils:0 "Zentralrat"
  GER_friedrich_von_bernhardi:0 "Friedrich von Bernhardi"
@@ -1522,6 +1546,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  GRE_dimitris_ioannou:0 "Dimítris Ioánnou"
  GRE_anastasios_charalambis:0 "Anastásios Charalámbis"
  GRE_georgios_polymenakos:0 "Geórgios Polymenákos"
+ GRE_petros_soumilas:0 "Pétros Soumílas"
  GRE_metropolitan_chrysostom:0 "Metropolitan Chrysóstomos"
  GRE_aristeidis_stergiadis:0 "Aristeídis Stergiádis"
  GRE_dimosthenis_ligdopoulos:0 "Dimosthénis Ligdópoulos"
@@ -1731,6 +1756,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  # DUTCH EAST INDIES
  INS_a_w_frederik_idenburg:0 "Alexander Idenburg"
  INS_frits_van_daalen:0 "Frits van Daalen"
+ INS_volksraad:0 "Volksraad"
 
  # IRELAND
  IRE_michael_collins:0 "Mícheál Ó Coileáin"
@@ -1739,6 +1765,8 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  IRE_patrick_pearse:0 "Pádraig Pearse"
  IRE_owen_duffy:0 "Eoin O'Duffy"
  IRE_tim_healy:0 "Tim Healy"
+ IRE_eamon_de_valera:0 "Éamon de Valera"
+ IRE_liam_lynch:0 "Liam Ó Loingsigh"
 
  # IRAQ
  IRQ_abdullah_i:0 "Abdullah I"
@@ -2290,7 +2318,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  # MALI
  MLI_ag_mohammed_kaocen:0 "Ag Mohammed Wau Teguidda Kaocen"
  MLI_dasa_marka:0 "Dasa Marka"
- MLI_dasa_marka_desc:0 "Даса, посланник вождей племени Марка в регионе Бона"
+ MLI_dasa_marka_desc:0 "Даса, посланник вождей племени Марка в регионе Бона."
 
  # MOLDOVA
  MOL_ion_inculet:0 "Ion Inculet"
@@ -2507,6 +2535,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  PAR_rufino_recalde_milesi:0 "Rufino Recalde Milesi"
  PAR_manuel_franco:0 "Manuel Franco"
  PAR_emiliano_gonzalez_navero:0 "Emiliano González Navero"
+ PAR_adolfo_chirife:0 "Adolfo Chirife"
 
  # PAPAL STATES
  PAP_college_of_cardinals:0 "College of Cardinals"
@@ -2518,13 +2547,13 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
 
  # PERSIA
  PER_ahmad_shah_qajar:0 "Ahmad Shah Qajar"
- PER_persian_central_government:0 "Persian Central Government"
  PER_reza_khan:0 "Reza Khan"
  PER_abdollah_amir_tahmasebi:0 "Abdollah Amir Tahmasebi"
  PER_karim_buzarjomehri:0 "Karim Buzarjomehri"
  PER_mohammad_taqi_pessian:0 "Mohammad Taqi Pessian"
  PER_soleyman_eskandari:0 "Soleiman Eskandari"
  PER_mirza_kuchik_khan:0 "Mirza Kuchik Khan"
+ PER_nezam_us_saltaneh:0 "Nezam-us-Saltaneh"
 
  # THE PHILIPPINES
  PHI_manuel_luis_quezon:0 "Manuel Luis Quezón"
@@ -2961,6 +2990,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  RUS_nikolai_lokhvitsky:0 "Nikolai Lokhvitsky"
  RUS_mikhail_stakhovich:0 "Mikhail Stakhovich"
  RUS_nikolai_nekrasov:0 "Nikolai Nekrasov"
+ RUS_yuri_danilov:0 "Yuri Danilov"
 
  SIB_pyotr_vologodsky:0 "Pyotr Vologodsky"
  SIB_pyotr_derber:0 "Pyotr Derber"
@@ -3027,7 +3057,6 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
 
  # RIO GRANDE DO SUL
  RGS_borges_de_medeiros:0 "Borges de Medeiros"
- RGS_abilio_de_nequete:0 "Abilio de Nequete"
  RGS_joaquim_de_assis_brasil:0 "Joaquim de Assis Brasil"
  RGS_deodato_manuel_ramos:0 "Deodato Manuel Ramos"
 
@@ -3035,9 +3064,47 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  RYU_sho_sho:0 "Shō Shō"
 
  # NEJD
- SAU_abdulazis_ibn_saud:0 "Abdulaziz ibn Saud"
+ SAU_abdulaziz_al_saud:0 "Abdulaziz ibn Saud"
+ SAU_Abdulaziz_desc: "After the destruction of the second Saudi state, the deposition of his father, exile in Kuwait, and the resurgence of the Saudi state, Abdulaziz has claimed the mantle of his ancestors to unite Nejd, and subsequently Arabia, from the grasp of the Ottomans and their allies."
  SAU_muhammad_bin_abdul_rahman:0 "Muhammad bin Abdul-Rahman"
-
+ SAU_zaidan_ibn_hithlain: "Zaydan Ibn Hithlain"
+ SAU_saud_kabeer: "Saud Al Kabeer Al Saud"
+ SAU_muhammad_bin_abdul_rahman: "Muhammad Bin Abdulrahman Al Saud"
+ SAU_Abdulrahman_Al_Saud: "Abdulrahman Al Saud"
+ SAU_saad_bin_abdul_rahman: "Saad Bin Abdulrahman Al Saud"
+ SAU_faisal_al_duwaish: "Faisal Al Duwaish"
+ SAU_sultan_bin_bajad: "Sultan Bin Bajad"
+ SAU_yusuf_yasin: "Yusuf Yasin"
+ SAU_khalid_al_hakim: "Khalid Al Hakim"
+ SAU_fuad_hamza: "Fuad Hamza"
+ SAU_abdullatif_mendeel: "Abdullatif Al Mendeel"
+ SAU_muhammad_al_dugither: "Muhammad Al Dugither"
+ SAU_abdullah_al_damluji: "Abdullah Al Damluji"
+ SAU_hafez_wahba: "Hafez Wahba"
+ SAU_khaled_al_gargani: "Khaled Al Gargani"
+ SAU_bashir_saadawi: "Bashir Al Saadawi"
+ SAU_ahmed_pasha_hamza: "Ahmed Pasha Hamza"
+ SAU_abdullah_alireza_zainal: "Abdullah Alireza Zainal"
+ SAU_noura_al_saud: "Noura Al Saud"
+ SAU_muhammad_bin_abdullatif_al_sheikh: "Muhammad Bin Abdullatif Al Sheikh"
+ SAU_john_philby: "St John Philby"
+ SAU_majid_al_khathilah: "Majid Al Khathilah"
+ SAU_abdullah_bin_suleiman: "Abdullah Bin Suleiman Al Hamdan"
+ SAU_ahmed_bin_abdullah_al_thanyan_al_saud: "Ahmed Al Thanyan Al Saud"
+ SAU_said_kurdi: "Said Al Kurdi"
+ SAU_turki_bin_abdulaziz: "Turki Bin Abdulaziz"
+ SAU_saud_bin_abdullah_bin_jilwi_al_saud: "Saud bin Abdullah bin Jilwi Al Saud"
+ SAU_Abdullah_bin_Jilwi_Al_Saud: "Abdullah bin Jilwi Al Saud"
+ SAU_abdul_mohsen_al_faram: "Abdul Mohsen Al Faram"
+ SAU_rashid_bin_layla: "Rashid Bin Layla"
+ SAU_Hamza_Ghoth: "Hamza Ghoth"
+ SAU_saud_kabeer: "Saud Al Kabeer"
+ SAU_abdulrahman_al_saud: "Abdulrahman Al Saud"
+ SAU_saad_bin_abdul_rahman: "Sa'ad bin Abdul Rahman"
+ SAU_faisal_al_duwaish: "Faisal Al Duwaish"
+ SAU_zaidan_ibn_hithlain: "Zaidan Ibn Hithlain"
+ SAU_sultan_bin_bajad: "Sultan Al Otaybi"
+ 
  # SIAM
  SIA_chulalongkorn:0 "Chulalongkorn"
  SIA_vajiravudh:0 "Vajiravudh"
@@ -3454,7 +3521,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  SWE_prins_wilhelm:0 "Prins Wilhelm"
 
  # SWITZERLAND
- SWI_federal_council_leader_desc: "Федеральный совет Швейцарии, основанный в 1848 г., представляет собой исполнительный совет из семи членов, который является коллективным главой государства. Каждый член совета возглавляет один из семи федеральных департаментов, а должность федерального президента ежегодно переходит от одного члена совета к другому, причем вице-президент, занимающий этот пост в текущем году, становится президентом в следующем."
+ SWI_federal_council_leader_desc: "Федеральный совет Швейцарии, основанный в 1848 году, представляет собой исполнительный совет из семи членов, который является коллективным главой государства. Каждый член совета возглавляет один из семи федеральных департаментов, а должность федерального президента ежегодно переходит от одного члена совета к другому, причем вице-президент, занимающий этот пост в текущем году, становится президентом в следующем."
  SWI_marc_schleppy:0 "Marc Schleppy"
  SWI_theodor_real:0 "Theodor Real"
  SWI_alfred_audeoud:0 "Alfred Audéoud"
@@ -3524,6 +3591,12 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  # TUNISIA
  TUN_naceur_bey:0 "Naceur Bey"
  TUN_ali_bash_hamba:0 "Ali Bash Hanba"
+ TUN_bechir_sfar:0 "Béchir Sfar"
+ TUN_abdekjelil_zaouche:0 "Abdeljelil Zaouche" 
+ TUN_kahirullah_bin_mustapha:0 "Kahirullah Bin Mustapha"
+ TUN_alsadek_zmerli:0 "Al-Sadek Zmerli"
+ TUN_sadok_ghileb:0 "Sadok Ghileb"
+ TUN_abdelaziz_thaalbi:0 "Abdelaziz Thâalbi"
  
  # OTTOMAN EMPIRE / TURKEY
  TUR_prens_sabahattin:0 "Prens Sabahattin"
@@ -3940,9 +4013,11 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  MCO_suffren_reymond:0 "Suffren Reymond"
 
  #Liechtenstein
- LIE_johann_ii:0 "Johann II"
+ LIE_johann_ii:0 "Johann II."
+ LIE_franz_i:0 "Franz I."
  LIE_albert_schadler:0 "Albert Schädler"
  LIE_martin_ritter:0 "Martin Ritter"
+ LIE_karl_aloys_of_liechtenstein:0 "Karl Aloys von und zu Liechtenstein"
 
  #Andorra
  ADR_general_council:0 "General Council"
