--- a/localisation/russian/ww1_traits_l_russian.yml
+++ b/localisation/russian/ww1_traits_l_russian.yml
@@ -207,7 +207,7 @@
  rus_great_reformer:0 "Великий реформатор"
  rider_named_death:0 "Всадник по имени Смерть"
  vozhd_of_proletariat:0 "Вождь мирового пролетариата"
- lion_of_judah:0 "Лев Иудеи"
+ lion_of_judah:0 "Лев Иуды"
  assassination_survivor:0 "Переживший покушение"
  pope:0 "Папа Римский"
  ethem:0 "Председатель"
