portraits from CRONSTEDT'S TREACHERY, credit to CrankyRack

--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -3017,6 +3017,8 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  TRC_ippolit_savitskyy:0 "Ippolit Savitskyy"
  TRC_yakov_zhitnikov:0 "Yakov Zhitnikov"
  
+ RSO_boris_vilkitsky:0 "Boris Vilkitsky"
+ 
  UCH_matvey_martynov:0 "Matvey Martynov"
  UCH_vladimir_akutin:0 "Vladimir Akutin"
  UCH_vladimir_volsky:0 "Vladimir Volsky"
@@ -3037,6 +3039,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  TBK_boris_rezukhin:0 "Boris Rezukhin"
  TBK_vasiliy_sokolov:0 "Vasiliy Sokolov"
  TBK_pavel_zhuravlyov:0 "Pavel Zhuravlyov"
+ 
  
  USS_ivan_kalmykov:0 "Ivan Kalmykov"
  
