--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -709,7 +709,7 @@
  BHU:0 "Bhutan"
  BHU_DEF:0 "Bhutan"
  BHU_ADJ:0 "Bhutanese"
- LIB_fascism:0 "National Liberia"
+ LIB_fascism:0 "Nationalist Liberia"
  LIB_fascism_DEF:0 "the National Union of Liberia"
  LIB_communism:0 "People's Republic of Liberia"
  LIB_communism_DEF:0 "the People's Republic of Liberia"
