--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5104,15 +5104,20 @@ ww1_romania.37.b:0 "Alright alright, lets quitely kill the bill"
 ww1_romania.39.t:0 "Socialist Clubs Gaining Popularity in Moldavia!"
 ww1_romania.39.d:0 "In Moldavia recently, socialist clubs have been gaining ever increasing popularity, with rotten socialist ideas being spread throughout society. The strength of the clubs, are still rising with no signs of pausing. If this trend continues, this may pose a serious threat to our rule and the people of Romania."
 ww1_romania.39.a:0 "Something must be done."
-
+ROM_not_we_and_them_but_us:0 "Unity of the 2 Estates"
 ROM_the_party_of_thieves:0 "The Party of Thieves"
 ROM_sec:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£attacker_speed_texticon Division Speed: §G+5.00%§!"
-
+ROM_the_southern_wall:0 "The Southern Wall"
+ROM_stragetic_fortifications_on_the_southern_border:0 "Fortify Key Cities on the Bulgarian Border"
+ROM_complete_the_defense_of_the_southern_carpathians:0 "Complete the Defense of the Southern Carpathians"
+ROM_strike_swift_and_hard:0 "The 'Z' Hypothesis"
 ROM_sway_the_vote_of_soldiers:0 "Sway the Vote of Soldiers"
 ROM_sway_intellectuals:0 "Sway Intellectuals"
 ROM_rural_base.tt:0 "If §YDmitrie Sturdza§! is hired as an advisor, this focus will have the following effects:\nChange in popularity of Democracy: §G+15.00%§!\nPolitical Power: §G+50§!.\nGain Base Stability: §G+5.00%§!.\n\n"
 ROM_rural_base.tt2:0 "\nOur advisor §YDmitrie Sturdza§! is §GImproving§! the effects of this focus."
-
+ww1_romania.43.t:0 "Not 'Us vs Them', but 'We'"
+ww1_romania.43.d:0 "Romanian society is, unfortunately, very polarized. The biggest division in society comes from the landlords vs the peasants, with both sides holding a deep rooted distain for eachother. If we wish to modernize, we cannot let these petty divisions divide us. Our only hope towards ending polarization is towing the middle line between the 2 groups, to appease both sides. If we can't, Romania will stay backwards forever."
+ww1_romania.43.a:0 "There has to be a way!"
 ROM_the_party_of_thieves_desc:0 "The PNL governments of the past have been filled with corruption, corruption so deeply rooted everywhere in society that an investigation is needed. We must investigate several public institutions for PNL corruption, and shut them down."
 pot_tt:0 "When this focus is selected:\nGets event '§YShutting Down the Tramcar Society§!'\nWe will attempt to take down several pro §lPNL§! organizations, on charges of corruption. We should be prepared to face §Rsignificant§! opposition to these actions!"
 ROM_re_assure_liberals:0  "Reassure The Liberals"
@@ -5482,10 +5487,7 @@ ROM_acds:0 "Modify §YRomanian Army§! by\n£organization_texticon Division Orga
 ROM_ads:0 "Modify §YRomanian Army§! by\n£attacker_speed_texticon Divisions Speed: §G+10.00%§!"
 
 member_of_pc:0 "Member of §cPC§!"
-ROM_the_southern_wall:0 "The Southern Wall"
-ROM_stragetic_fortifications_on_the_southern_border:0 "Fortify Key Cities on the Bulgarian Border"
-ROM_complete_the_defense_of_the_southern_carpathians:0 "Complete the Defense of the Southern Carpathians"
-ROM_strike_swift_and_hard:0 "The 'Z' Hypothesis"
+
 member_of_pnl:0 "Member of §lPNL§!"
 member_of_psdr:0 "Member of §rPSDR§!"
 member_of_pnd:0  "Member of §qPND§!"
@@ -5517,6 +5519,7 @@ ROM_german_weapons_withdrawn.tt:0 "We will §Rlose§! the military factory from 
  TUR_integrating_persian_minorities_desc:0 "Just like us, [PER.GetName] has also been struggling with integrating their various minorities. Now that old [PER.GetAdjective] lands with minorities under our control, we can continue what they've started, successfully."
  TUR_caucasian_resettlement_campaigns:0 "Caucasian Resettlement Campaigns"
  TUR_caucasian_resettlement_campaigns_desc:0 "Various non-Muslim ethnicities in Caucasus makes it hard to rule these newly conquered lands. By swapping the local population with Turks from Anatolia and Caucasia, we can make these lands easier to rule."
+
  TUR_centralized_tax_collection_in_middle_east:0 "Centralized Tax Collection in Middle East"
  TUR_centralized_tax_collection_in_middle_east_desc:0 "Alongside Anatolia and Balkans, Middle East also has its fair share of large cities. But these cities has always managed to avoid our full control. We should centralize many administrative regions, especially, tax collection to fully integrate them."
  TUR_centralize_levant_administration:0 "Centralize Levant Administration"
