--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -12936,7 +12936,7 @@ FRA_leave_MOR: "Leave Morocco"
  ww1_balkan.25.d: "The Serbs have failed in negotiations to create an alliance to liberate the Balkans with Bulgarians, but they still aspire to liberate the Balkans from Turkish rule and are desperate for our help."
  ww1_balkan.25.a: "Together for victory!"
 
- ##balkan war events
+ # war events
  kis_firstbalkan_war: "The Balkan War has started"
  ww1_firstbalkan.1.t: "Calm Before the Storm"
  ww1_firstbalkan.1.d: "The preparations for the inevitable war are complete. Now is the time to slowly start the plans to finally liberate the peninsula from five centuries of Turkish rule. In a few days, the attack will be launched."
@@ -15063,7 +15063,68 @@ test_show_shall_coco_SSP:0 "[?SSP|Y] seats for Shall's party"
  balkan_league.22.d: "Those Romania bastards have marched into Southern Dubroja uncontested while we deal with the Balkan War turmoil..."
  balkan_league.22.a: "Damn"
 
- balkan_l
+#Bulgaria-Ottoman/Turkey Negotiations
 
- 
+ww1_BUL_TUR.1.t: "Continue Negotiations With Bulgaria?"
+ww1_BUL_TUR.1.d: "We've been negotiating and establishing diplomatic ties with the newly independent Bulgarian state; we've made several breakthroughs, including recognizing Bulgarian independence and Ferdinand's title of Tsar, but the new Bulgarian prime minister, Ivan Geshov, would like to continue negotiations. Should Nasim Bey meet with Mr. Geshov?"
+ww1_BUL_TUR.1.a: "Yes, continue negotiations"
+ww1_BUL_TUR.1.b: "No, negotiations are unnecessary"
+
+ww1_BUL_TUR.2.t: "Concerns Shared by Nasim Bey: Conscription of Ottoman Citizens in our Borders"
+ww1_BUL_TUR.2.d: "During Ivan Geshov's recent negotiations with Nasim Bey, he was alerted about Young Turks' concerns about Ottoman citizens being forcefully conscripted while in Bulgaria. How do we respond to this?"
+ww1_BUL_TUR.2.a: "He has a good point"
+ww1_BUL_TUR.2.b: "Nope"
+
+ww1_BUL_TUR.3.t: "The Young Turk Administration Agrees to Continue Negotiations"
+ww1_BUL_TUR.3.d: "The new 'Young Turk' administration has agreed to continue negotiations, through Nasim Bey. Ivan Geshov eagarly awaits Bey's arrival to discuss the many problems that unfortunatly prevent harmony between us."
+ww1_BUL_TUR.3.a: "Exciting"
+
+ww1_BUL_TUR.4.t: "The Young Turk Administration Rejects Negotiations"
+ww1_BUL_TUR.4.d: "Unfortunatly, the continuation of negotiations with the Young Turk administration will not be possible soon."
+ww1_BUL_TUR.4.a: "Their Loss"
+
+ww1_BUL_TUR.5.t: "What to Discuss with Geshov?"
+ww1_BUL_TUR.5.d: "What issue is would we like to bring to Ivan Geshov's attention?"
+ww1_BUL_TUR.5.a: "Conscription of Ottoman Citizens in Bulgaria"
+ww1_BUL_TUR.5.b: "Concerns about upcoming Bulgarian Mufti Elections"
+ww1_BUL_TUR.5.c: "Border Banditry:
+ww1_BUL_TUR.5.d: "Border Refugee Problem"
+ww1_BUL_TUR.5.e: "Cease Negotiations"
+ww1_BUL_TUR.5.f: "We've Made All Our Points"
+ww1_BUL_TUR.5.g: "Border Conflicts"
+
+ww1_BUL_TUR.6.t: "Coscription of Our Citizens in Bulgaria"
+ww1_BUL_TUR.6.d: "Since Bulgaria's independence was only in 1908 and up until was still our subject, many legally Ottoman citizens have been forcefully conscripted into the quickly expanding Bulgarian armed forces."
+ww1_BUL_TUR.6.a: "This is indeed unnacceptable"
+
+ww1_BUL_TUR.7.t: "Concerns about upcoming Bulgarian Mufti Elections"
+ww1_BUL_TUR.7.d: "We have a very valid concern that if Hocazade Mehmet Muhiddin Efendi wins the Bulgarian Grand Mufti Elections this December, that all muslims residing in Bulgaria would lose all their rights and assimilated into Eeastern Orthodox Christians, loyal to the Tsar."
+ww1_BUL_TUR.7.a: "Express our Concerns"
+
+ww1_BUL_TUR.8.t: "Border Banditry"
+ww1_BUL_TUR.8.d: "Our Balkan borders, and territories are in pure chaos, even in the territories closest to the Sublime Porte. Along our border with Bulgaria, banditry has become far too common—on both sides of the border, mind you. Banditry is not only wrong and illegal, but it's also terrible for business."
+ww1_BUL_TUR.8.a: "We must Crush them!"
+
+ww1_BUL_TUR.9.t: "Border Refugee Problem"
+ww1_BUL_TUR.9.d: "Our Balkan borders and territories are in pure chaos, even in the territories closest to the Sublime Porte. Along our border with Bulgaria, particularly in Thrace, illegal immigration and abandonment of villages due to banditry and border tensions have only enriched the bandit haven, a staggering decline in business, and with the lack of civilians, the border will become more militarized and tense, which is exactly what we do not need."
+ww1_BUL_TUR.9.a: "We should invest into the area to attract more citizens"
+ww1_BUL_TUR.9.b: "they will have to stay, if they must be convinced by bayonet point"
+
+ww1_BUL_TUR.10.t: "Border Conflicts"
+ww1_BUl_TUR.10.d: "Our border with Bulgaria is quite tense, as both sides aren't blind to the brewing storm over the balkans we've both armed our borders in a defensive and possibly an invasive manner. While no armed battles have occured, YET, there has been verbal skirmishes."
+ww1_BUL_TUR.10.a: "Yes, this must be solved"
+
+ww1_BUL_TUR.11.t: "Bulgaria Agrees"
+ww1_BUL_TUR.11.d: "Regarding the latest issue discussed, Nasim Bey and Ivan Geshov have reached an agreement."
+ww1_BUL_TUR.11.a: "Great"
+
+ww1_BUL_TUR.12.t: "Bulgaria Disagrees"
+ww1_BUL_TUR.12.d: "Regarding the latest issue discussed, Nasim Bey and Ivan Geshov have failed to find common grounds."
+ww1_BUL_TUR.12.a: "Back Down"
+ww1_BUL_TUR.12.b: "Cease Negotiations"
+
+ww1_BUL_TUR.13.t: "Negotiations Fall Through"
+ww1_BUl_TUR.13.d: "Our negotiations with the Young Turks have come to a dead end, it's become apparent we have conflicting ideas, and we've been unable to reach a middle ground, so the diplomats have returned to their respective homes."
+ww1_BUL_TUR.13.a: "Their Loss"
+
  
