--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5105,6 +5105,7 @@ ww1_romania.39.t:0 "Socialist Clubs Gaining Popularity in Moldavia!"
 ww1_romania.39.d:0 "In Moldavia recently, socialist clubs have been gaining ever increasing popularity, with rotten socialist ideas being spread throughout society. The strength of the clubs, are still rising with no signs of pausing. If this trend continues, this may pose a serious threat to our rule and the people of Romania."
 ww1_romania.39.a:0 "Something must be done."
 ROM_not_we_and_them_but_us:0 "Unity of the 2 Estates"
+ROM_invite_jews:0 "A Safe Haven for the Jews"
 ROM_the_party_of_thieves:0 "The Party of Thieves"
 ROM_sec:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£attacker_speed_texticon Division Speed: §G+5.00%§!"
 ROM_the_southern_wall:0 "The Southern Wall"
@@ -5114,6 +5115,7 @@ ROM_strike_swift_and_hard:0 "The 'Z' Hypothesis"
 ROM_sway_the_vote_of_soldiers:0 "Sway the Vote of Soldiers"
 ROM_sway_intellectuals:0 "Sway Intellectuals"
 ROM_rural_base.tt:0 "If §YDmitrie Sturdza§! is hired as an advisor, this focus will have the following effects:\nChange in popularity of Democracy: §G+15.00%§!\nPolitical Power: §G+50§!.\nGain Base Stability: §G+5.00%§!.\n\n"
+ROM_entrench_the_aristocracy:0 "Entrench the Aristocracy"
 ROM_rural_base.tt2:0 "\nOur advisor §YDmitrie Sturdza§! is §GImproving§! the effects of this focus."
 ww1_romania.43.t:0 "Not 'Us vs Them', but 'We'"
 ww1_romania.43.d:0 "Romanian society is, unfortunately, very polarized. The biggest division in society comes from the landlords vs the peasants, with both sides holding a deep rooted distain for eachother. If we wish to modernize, we cannot let these petty divisions divide us. Our only hope towards ending polarization is towing the middle line between the 2 groups, to appease both sides. If we can't, Romania will stay backwards forever."
